--- a/anchor/programs/counter/Cargo.toml
+++ b/anchor/programs/counter/Cargo.toml
@@ -1,12 +1,12 @@
 [package]
-name = "counter"
+name = "anchor-counter"
 version = "0.1.0"
 description = "Created with Anchor"
 edition = "2021"
 
 [lib]
 crate-type = ["cdylib", "lib"]
-name = "counter"
+name = "anchor_counter"
 
 [features]
 default = []
@@ -17,4 +17,4 @@ no-log-ix-name = []
 idl-build = ["anchor-lang/idl-build"]
 
 [dependencies]
-anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
+anchor-lang = {version = "0.31.1", features = ["init-if-needed"]}
